--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link href="static.css" rel="stylesheet" type="text/css">
     <title>woolcat</title>
   </head>
   <body>
