--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -9,12 +9,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Ma+Shan+Zheng&family=Noto+Serif+SC:wght@200..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@100..900&display=swap" rel="stylesheet">
-    <title>woolcat</title>
+    <title>CAC Atelier</title>
   </head>
   <body>
     <noscript>
       woolcat is a JavaScript app. Please enable JavaScript to continue.
     </noscript>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XTLJ0NRHZQ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-XTLJ0NRHZQ');
+    </script>
     <div id="app"></div>
     <script src="/js/compiled/app.js"></script>
   </body>
